# language-speech-practice

./: .gitignore  lefthook.yml  main.py  pyproject.toml
backend/: dependencies.py  main.py
backend/api/v1/: endpoints.py
backend/app/: main.py
backend/app/api/v1/: endpoints.py
backend/app/lessons/: manager.py  mode.py  types.py
backend/app/util/: languages.py  model.py
backend/lessons/: instructor.py  mode.py
backend/tests/: test_endpoints.py
backend/util/: audio.py  languages.py  model.py  type.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/data/: lessons.ts
frontend/src/app/: page.tsx
frontend/src/app/[id]/: page.tsx
frontend/src/app/audio/[id]/: page.tsx
frontend/src/app/dialogue/: page.tsx
frontend/src/app/flashcards/[level]/: page.tsx
frontend/src/app/grammar/: page.tsx
frontend/src/app/guided_dialogue/audio/[id]/: page.tsx
frontend/src/app/guided_dialogue/text/[id]/: page.tsx
frontend/src/app/session/[id]/: page.tsx
frontend/src/app/session/audio/[id]/: page.tsx
frontend/src/components/features/: dialogue.tsx  flashcard.tsx
frontend/src/data/: grammar.ts  lessons.ts  scenarios.ts  vocabulary.ts
frontend/src/data/vocabulary_raw/: hsk_n1.json  hsk_n2.json  hsk_n3.json  hsk_n4.json  hsk_n5.json  hsk_n6.json  hsk_n7+.json
frontend/src/lib/: backend.ts  input.tsx  languages.ts
frontend/src/lib/components/: audio.tsx
frontend/src/lib/components/ui/: input.tsx
lessons/: beginner.py  instructor.py  mode.py  types.py
util/: audio.py  languages.py  model.py  translator.py
