[project]
name = "language-speech-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets[audio]>=3.6.0",
    "langchain>=0.3.26",
    "lefthook>=1.11.16",
    "numpy<2",
    "ruff>=0.12.2",
    "scipy>=1.13.1",
    "sounddevice>=0.5.2",
    "torch==2.1.2",
    "transformers>=4.53.0",
]
