[project]
name = "language-speech-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.9.0",
    "datasets[audio]>=3.6.0",
    "deep-translator>=1.11.4",
    "isort>=6.0.1",
    "kokoro>=0.7.16",
    "langchain>=0.3.26",
    "lefthook>=1.11.16",
    "misaki[zh]>=0.9.4",
    "mypy>=1.17.0",
    "numpy<2",
    "pip>=25.1.1",
    "ruff>=0.12.2",
    "scipy>=1.13.1",
    "sounddevice>=0.5.2",
    "torch==2.1.2",
    "torchaudio>=2.1.2",
    "transformers>=4.53.0",
]
